@@ -19,10 +19,7 @@ can be divided into several different groups.
 These options specify the particular operation mode in which conntrackd runs. Only one of them can be specified at any given time.
 .TP
 .BI "-d "
-Run conntrackd in daemon mode. This option can be combined with "-S"
-.TP
-.BI "-S "
-Run conntrackd in statistics mode. Default mode is synchronization mode, so if you want to use
+Run conntrackd in daemon mode.
 .B conntrackd
 in statistics mode, you have to pass this option
 .SS CLIENT COMMANDS
