@@ -28,6 +28,7 @@ o hash lookup speedups based on comments from netdev's discussions
 o add support for connection logging to the statistics mode via Logfile
 o minor irrelevant fixes for uncommon error paths and fix several typos
 o detach daemon from its terminal (Ben Lenitz <BLentz@channing-bete.com>)
+o obsolete `-S' option: Use information provided by the config file
 
 version 0.9.5 (2007/07/29)
 ------------------------------
